src/style.css
/* ... */
/* Desktop */

@media (min-width: 450px),
(min-aspect-ratio: 0.57),
(orientation: landscape) {
     :root {
        --max-width: 1200px;
        --min-width: 600px;
        --perspective-angle: 5deg;
    }
    .header {
        padding-right: 0.8em;
        /* beware info-button overflow */
        min-width: var(--min-width);
    }
    .header__title {
        font-size: 2em;
    }
    .info-button {
        width: 3em;
        height: 3em;
    }
    .main {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
        max-width: var(--max-width);
        min-width: var(--min-width);
        margin: auto;
    }
    .box {
        padding: 0;
        margin: 0;
    }
    .talent-select-container {
        flex-basis: 60%;
        flex-grow: 1;
        perspective: max(calc(900px - 60vw), 200px);
        margin: auto;
    }
    .talent-select-container-1 {
        order: 1;
        margin-left: 1em;
    }
    .talent-select-container-2 {
        order: 3;
        margin-right: 1em;
    }
    .talent-select-box-1 {
        transform: rotateY(var(--perspective-angle));
    }
    .talent-select-box-2 {
        transform: rotateY(calc(var(--perspective-angle) * -1));
    }
    .talent-select-name {
        font-size: 1.5em;
    }
    .talent-dropdown-content {
        background-color: unset;
        background-image: linear-gradient( rgba(100%, 100%, 100%, 0.5), rgba(90%, 90%, 90%, 0.05));
    }
    .talent-dropdown-entries {
        max-height: 15em;
        overflow-y: hidden;
        margin-right: 2px;
    }
    .talent-dropdown-entries:hover {
        overflow-y: auto;
    }
    /*Hack to make scrollbar use transition on webkit*/
    @media screen and (-webkit-min-device-pixel-ratio:0) {
        .talent-dropdown-entries {
            background-color: rgba(0, 0, 0, 0);
            background-clip: text;
            transition: background-color .5s;
        }
        .talent-dropdown-entries:hover {
            background-color: rgba(0, 0, 0, 0.40);
        }
    }
    .talent-dropdown-entries::-webkit-scrollbar-thumb {
        background-color: inherit;
    }
    .talent-dropdown-entries__entry.dropdown- {
        padding: 0.2em;
        padding-left: 0.8em;
    }
    .talent-dropdown-entries__entry--highlighted {
        background-color: unset;
        background-image: linear-gradient( 90deg, rgba(100%, 100%, 100%, 0.8) 2%, transparent 2%);
    }
    .talent-dropdown-entries__entry__image {
        width: 2em;
        height: 2em;
        margin-right: 0.4em;
    }
    .talent-dropdown-entries__entry__name {
        white-space: nowrap;
        font-size: 1em;
    }
    .talent-dropdown-categories {
        max-height: 15em;
    }
    .talent-dropdown-category__entry {
        padding: 0.2em;
        padding-left: 0.8em;
        padding-top: 0.5em;
        padding-bottom: 0.5em;
    }
    .talent-dropdown-category__entry--highlighted {
        background-color: unset;
        background-image: linear-gradient( 90deg, rgba(100%, 100%, 100%, 0.8) 2%, transparent 2%);
    }
    .talent-dropdown-category__entry__name {
        white-space: nowrap;
        font-size: 1em;
    }
    .button-img {
        width: 2.4em;
        height: 2.4em;
        margin-left: 0.15em;
        margin-right: 0.15em;
    }
    .result-box {
        order: 2;
        flex-basis: 100%;
        flex-grow: 1;
        margin: auto 2em;
    }
    .result-button-imgs .button-img {
        width: 3em;
        height: 3em;
    }
    .result-name {
        font-size: 2.5em;
        min-height: 2.4em;
    }
    .info {
        max-width: 60ch;
        padding-left: 1em;
    }
    .info ul {
        padding-left: 1.7em;
    }
    .info ul ul {
        padding-left: 1.4em;
    }
}

